# mesa

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude/consults/: 2026-06-11-mesa-spec.md  2026-06-12-living-spec-docs-progressive-disclosure.md  2026-06-12-project-documents-storage.md
.github/workflows/: ci.yml  release.yml
docs/: agents.md  attachments.md  cc-dashboard.md  files-tab.md  fs-browse.md  git-tab.md  hooks.md  inbox.md  keyboard.md  storyboards.md  terminal.md  todo-watcher.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  KanbanBoard.tsx  StoryboardCanvas.tsx  agentProject.ts  api.ts  author.ts  boardView.ts  frontmatter.ts  index.css  keyboardScope.ts  lastFolder.ts  layout.ts  main.tsx  spatialNav.ts  syntaxHighlighter.ts  tags.ts  useFetch.ts
pm-docs/: README.md
pm-docs/docs/: architecture.md  index.md
pm-docs/specs/: 2026-06-11-mesa.md  2026-06-12-living-architecture-docs.md  2026-06-12-project-docs-tab.md  2026-06-12-web-ui-crud-cyberpunk.md  2026-06-12-web-ui-layout-panels.md
scripts/: agent-check-planning.sh  agent-check.sh  agents-check.sh  attachments-check.sh  build.sh  cc-check.sh  cli-check.sh  concurrent-check.sh  docs-drift-check.sh  hooks-check.sh  install.sh  storyboard-check.sh  todo-watcher-check.sh
scripts/agent-check/: 2026-06-12-living-docs-routing.md  planning-produced-spec.md  (+6 more)
specs/: 2026-06-11-mesa.md  2026-06-12-project-docs-tab.md  2026-06-12-web-ui-crud-cyberpunk.md  2026-06-12-web-ui-layout-panels.md
src/: api.rs  cli.rs  lib.rs  main.rs
(+109 files in other folders)
