[package]
name = "mesa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-embed = "0.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
ts-rs = "12.0.1"

[dev-dependencies]
tempfile = "3.27.0"
